--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second repogit</title>
+    <link rel="stylesheet" href="stylr.css">
 </head>
 <body>
     <h1>I can push to github</h1>
