--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>I can code now</h2>
     <h3>New code changed</h3>
     <p>I am munne</p>
+    <img src="Harvard-Architecture.jpg" alt="">
     
 </body>
 </html>
